
2019-04-15  Simon Sobisch <simonsobisch@gnu.org>

	* tree.c: removed superfluous inline prototypes for cb_ref/cb_try_ref

2019-04-07  Simon Sobisch <simonsobisch@gnu.org>

	* Makefile.am (COBC): use pre-inst-env ensuring to use the built version
	* Makefile.am: disabled "AM_YFLAGS -Wno-yacc" as this breaks older bison
	  versions
	* parser.y, typeck.c, tree.h, config.def: FR #354 added CONTINUE AFTER
	  to suspend runtime execution
	* parser.y (begin_statement_from_backup_pos): new function used for postponed
	  statement start

2019-03-26  Simon Sobisch <simonsobisch@gnu.org>

	* tree.c, tree.h: added cb_int7, cb_int8, cb_int16
	* parser.y: replaced cb_int(0,4,8,16) by pre-created cb_int0-cb_int16
	* typeck.c (cb_emit_open): replaced comparison of cached cb_int to compare
	  the actual integer value
	* tree.c (cb_int): minimized struct int_node and access providing minimal
	  speed for integer lookup and minimal less memory consumption
	* tree.c (cb_int_hex): fixed to not adjust hex-attribute of cached integers
	  by using a different cache
	* codgen.c, tree.c, tree.h: deactivated hex-attribute of CB_INTEGER for now
	  (marked with USE_INT_HEX) as this increases the struct and we *should*
	  pass the flags as constants in any case
	* tree.c (cb_int, cb_int_hex): disabled caching of integer values (other
	  than 0-8) for now (test, reactivate by defining CACHED_INTEGERS=1) as the
	  necessary lookup can take much time with many different integer values

2019-03-25  Simon Sobisch <simonsobisch@gnu.org>

	* field.c (cb_is_expr, cb_evaluate_expr, create_implicit_picture): fixed
	  check of literal type before accessing values as literals in some places
	* cobc.c (cobc_print_info): output endianess and native EBCDIC

2019-03-24  Simon Sobisch <simonsobisch@gnu.org>

	* codegen.c (output_bin_field) [__SUNPRO_C]: split generated initialization
	  of the field into two statements as some compilers don't allow an