@@ -1,4 +1,4 @@
-## Copyright (C) 2014-2015, 2017-2018 Free Software Foundation, Inc.
+## Copyright (C) 2014-2015, 2017-2019 Free Software Foundation, Inc.
 ## Written by Simon Sobisch, Edward Hart, Ron Norman
 ##
 ## This file is part of GnuCOBOL.
@@ -123,7 +123,7 @@ AT_CLEANUP
 
 
 AT_SETUP([REPORT not positive integers in COL / LINE PLUS])
-AT_KEYWORDS([report])
+AT_KEYWORDS([LINES COLS COLUMNS])
 
 AT_DATA([prog.cob], [
        IDENTIFICATION DIVISION.
@@ -142,14 +142,14 @@ AT_DATA([prog.cob], [
        REPORT SECTION.
        RD  rp.
        01  rp-head TYPE PH.
-          02  LINE 1, COL 0 VALUE "Hello!".
-          02  LINE 2, COL 2 VALUE "Hello!".
-          02  LINE PLUS 1.
-              03 COLUMN 01      PIC X(09) VALUE 'CUST. NO.'.
-              03 COLUMN PLUS 0  PIC X(09) VALUE 'ITEM'.
-          02  LINE PLUS 2.
-              03 COLUMN 1.5     PIC X(09) VALUE 'CUST. NO.'.
-              03 COLUMN + -10   PIC X(09) VALUE 'ITEM'.
+          02  LINE NUMBER IS 1, COLUMNS 0 VALUE "Hello!".
+          02  LINE IS 2,        COLS    2 VALUE "Hello!".
+          02  LINE NUMBERS ARE PLUS 1.
+              03 COLUMN NUMBER 01  PIC X(09) VALUE 'CUST. NO.'.
+              03 COLUMN PLUS 0     PIC X(09) VALUE 'ITEM'.
+          02  LINES ARE PLUS 2 COL NUMBERS PLUS 0.
+              03 COLUMN 1.5        PIC X(09) VALUE 'CUST. NO.'.
+              03 COLUMN + -10      PIC X(09) VALUE 'ITEM'.
 
        01 rp-detail TYPE DETAIL.
           02 LINE PLUS 1.
